Particles temporary fix in homepage. Particles cover 1/3 button in 'sourcery for kids' section. Added z-index: -1 for now

--- a/src/pages/Homepage/AcademiesDescriptionSection/AcademyKidsDescription/academy-kids-description.scss
+++ b/src/pages/Homepage/AcademiesDescriptionSection/AcademyKidsDescription/academy-kids-description.scss
@@ -28,6 +28,7 @@
     max-width: to-rem(442);
     position: absolute;
     transform: translateY(-30%);
+    z-index: -1;
   }
 
   &__icons {
